Update to species_co_occurrence

--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "id": "bfe7d196-5c94-423c-b184-c0810b08f648",
    "metadata": {},
    "outputs": [],
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "0a9789df-2f68-4e51-9d89-53cef724d850",
    "metadata": {},
    "outputs": [
@@ -174,7 +174,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -329,7 +329,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 10,
    "id": "5d39b7ce-792b-456a-a0d1-2a4f197b8997",
    "metadata": {},
    "outputs": [
@@ -416,7 +416,7 @@
        "56     56  DOE CANYON       2019 2019-06-27"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -455,7 +455,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "id": "92572a92-f78c-4b0b-b4fd-e4ca80ca50e6",
    "metadata": {},
    "outputs": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 13,
    "id": "b987d274-1224-467b-9aa8-955a944e417c",
    "metadata": {},
    "outputs": [
@@ -504,7 +504,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -515,7 +515,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 14,
    "id": "8a225da1-763c-45a3-98f8-67257c44fa83",
    "metadata": {},
    "outputs": [
@@ -533,7 +533,7 @@
        "Name: count, dtype: float64"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -547,7 +547,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 15,
    "id": "ebd27e24-0c46-4105-9033-8e7ecf74191d",
    "metadata": {},
    "outputs": [
@@ -568,7 +568,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 16,
    "id": "6eda8584-5d50-45be-a8ad-4c3985634adf",
    "metadata": {},
    "outputs": [
@@ -586,7 +586,7 @@
        "Name: frp, dtype: float64"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -597,7 +597,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "5148381e-dc98-413e-8266-9077eb8d2785",
    "metadata": {},
    "outputs": [
@@ -617,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "00c7dbb2-da94-4e8b-befc-cc21021f84a9",
    "metadata": {},
    "outputs": [
@@ -637,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 19,
    "id": "bf4ac45e-4416-4247-81d8-d499d70acce6",
    "metadata": {},
    "outputs": [
@@ -666,7 +666,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "id": "87c61699-8160-4cf4-af75-6199004b407b",
    "metadata": {},
    "outputs": [],
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "id": "28fb5f44-037e-4433-b44c-906f8e745a98",
    "metadata": {},
    "outputs": [
@@ -882,7 +882,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -912,7 +912,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "id": "4b7522a5-77cc-408d-9d54-bf51660d36ec",
    "metadata": {},
    "outputs": [
@@ -934,7 +934,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "id": "dca44746-57c1-4122-8046-ca2b58c4565b",
    "metadata": {},
    "outputs": [
@@ -944,7 +944,7 @@
        "115035"
       ]
      },
-     "execution_count": 25,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -955,7 +955,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "id": "8daab39e-f3b8-485f-a617-3ae0409b4572",
    "metadata": {},
    "outputs": [
@@ -976,7 +976,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -987,7 +987,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "id": "a940b3cb-7702-48c3-bbf8-397847489dba",
    "metadata": {},
    "outputs": [
@@ -1067,7 +1067,7 @@
        "4 2019-06-27      2006 2019-06-27 14:06:00-06:00      Day"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1082,7 +1082,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 26,
    "id": "b1ae7f7c-be2f-4179-ab96-9145dbc458ba",
    "metadata": {},
    "outputs": [
@@ -1107,7 +1107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 27,
    "id": "3c154fab-3ab9-4d3d-856b-34c2a1fc018d",
    "metadata": {},
    "outputs": [
@@ -1148,7 +1148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "id": "a990b716-51b8-4d18-b160-5ec4c7745f0a",
    "metadata": {},
    "outputs": [],
@@ -1158,7 +1158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 29,
    "id": "0425f330-757c-471d-b396-a686015083dd",
    "metadata": {},
    "outputs": [
@@ -1167,7 +1167,7 @@
      "output_type": "stream",
      "text": [
       "Number of unique (Fire_ID, acq_datetime) groups: 3413\n",
-      "Identified a total of [13328/11.586039031599078] duplicate observations.\n"
+      "Identified a total of [13328(11.59)] duplicate observations.\n"
      ]
     },
     {
@@ -1176,7 +1176,7 @@
        "0"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1240,7 +1240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 30,
    "id": "de86a71c-2ec9-49aa-acea-257fbd78ea8d",
    "metadata": {},
    "outputs": [
@@ -1300,7 +1300,7 @@
        "2  6.081448  42.680268  0.142489"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1313,7 +1313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 31,
    "id": "d9f82cb7-ea5d-4b8d-98ba-ea5431878334",
    "metadata": {},
    "outputs": [
@@ -1331,7 +1331,7 @@
        "Name: frp_wkm2, dtype: float64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1342,7 +1342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 32,
    "id": "6a01fbb0-4a2e-4164-a0f6-bee2e5e01a4c",
    "metadata": {},
    "outputs": [
@@ -1371,7 +1371,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 33,
    "id": "b4ea4049-ffa7-48cc-b4e5-834b9ba030e4",
    "metadata": {},
    "outputs": [
@@ -1396,7 +1396,7 @@
        "67"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 33,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1424,7 +1424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 34,
    "id": "83e84d72-4f43-4510-845d-ea8a8d205296",
    "metadata": {},
    "outputs": [
@@ -1472,7 +1472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "id": "0f70b637-93f4-40d5-9831-8bef00f56416",
    "metadata": {},
    "outputs": [],
@@ -1482,7 +1482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 36,
    "id": "65ec1fe2-21b3-4a45-9928-3d4d047cac03",
    "metadata": {},
    "outputs": [
@@ -1491,7 +1491,14 @@
      "output_type": "stream",
      "text": [
       "Bounding extent for the SRM: [-1184484.4171543047, -689479.4244799014, 1397166.4988387332, 2246127.1529145916]\n",
-      "Grid saved to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/aspenfires_rgrid_375m.gpkg\n"
+      "Grid saved to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/VIIRS/aspenfires_rgrid_375m.gpkg\n",
+      "\n",
+      "Total elapsed time: 1.11 minutes.\n",
+      "\n",
+      "\n",
+      "~~~~~~~~~~\n",
+      "\n",
+      "Done!\n"
      ]
     }
    ],
@@ -1570,7 +1577,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 37,
    "id": "56f2a665-2f17-4bde-919a-3093574a0557",
    "metadata": {},
    "outputs": [],
@@ -1580,7 +1587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 38,
    "id": "f5515078-7132-414e-bc36-50f876329144",
    "metadata": {},
    "outputs": [
@@ -1601,7 +1608,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 38,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1612,14 +1619,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 39,
    "id": "8e0faeab-f539-4a47-ac93-3933649cc719",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9abc69f219104fb9bc930ba01f85aafa",
+       "model_id": "dc8cd844bf584c0ea4f36a0a784b03ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1635,7 +1642,7 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Total elapsed time: 3.27 minutes.\n",
+      "Total elapsed time: 3.46 minutes.\n",
       "\n",
       "\n",
       "~~~~~~~~~~\n",
@@ -1706,6 +1713,7 @@
     "            count='count',\n",
     "            max='max', \n",
     "            mean='mean',\n",
+    "            sum='sum',\n",
     "            p90=lambda x: x.quantile(0.9) if not x.empty else 0,\n",
     "            first=lambda x: overlay.loc[x.index, :].sort_values('acq_datetime').iloc[0]['frp_fr']\n",
     "        )\n",
@@ -1718,6 +1726,8 @@
     "    aggregated['night_count'] = daynight_stats['count'].get('Night', 0)\n",
     "    aggregated['frp_max_day'] = daynight_stats['max'].get('Day', 0)\n",
     "    aggregated['frp_max_night'] = daynight_stats['max'].get('Night', 0)\n",
+    "    aggregated['frp_csum_day'] = daynight_stats['max'].get('Day', 0)\n",
+    "    aggregated['frp_csum_night'] = daynight_stats['max'].get('Night', 0)\n",
     "    aggregated['frp_mean_day'] = daynight_stats['mean'].get('Day', 0)\n",
     "    aggregated['frp_mean_night'] = daynight_stats['mean'].get('Night', 0)\n",
     "    aggregated['frp_p90_day'] = daynight_stats['p90'].get('Day', 0)\n",
@@ -1754,7 +1764,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 40,
    "id": "c113c774-dd4e-4884-adf5-e97bcf20b98e",
    "metadata": {},
    "outputs": [
@@ -1792,7 +1802,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 41,
    "id": "e6a787a8-4df9-4605-9e74-8a1fd63b1952",
    "metadata": {},
    "outputs": [
@@ -1979,7 +1989,7 @@
        "1295  2147.369332    2147.369332          8           10  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1993,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 42,
    "id": "89505499-17b7-417b-a1c1-d032c97cfe1c",
    "metadata": {},
    "outputs": [
@@ -2011,7 +2021,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 43,
    "id": "10bf0efa-590c-4b09-824f-1e489991e71d",
    "metadata": {},
    "outputs": [
@@ -2048,7 +2058,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "49fb4bf0-0811-4a9e-90c5-e6d82df24474",
    "metadata": {},
    "outputs": [],
@@ -2058,7 +2068,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 45,
    "id": "9b5fde5b-c2bc-4ec8-9171-193abde24c17",
    "metadata": {},
    "outputs": [],
@@ -2068,7 +2078,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 46,
    "id": "c41ceab4-82ff-4aa8-a195-904b78411756",
    "metadata": {},
    "outputs": [
@@ -2079,13 +2089,14 @@
        "       'overlap', 'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90',\n",
        "       'frp_first', 'day_max_frp', 'dt_max_frp', 'first_obs_date',\n",
        "       'last_obs_date', 't4_max', 't4_mean', 't5_max', 't5_mean', 'day_count',\n",
-       "       'night_count', 'frp_max_day', 'frp_max_night', 'frp_mean_day',\n",
-       "       'frp_mean_night', 'frp_p90_day', 'frp_p90_night', 'frp_first_day',\n",
-       "       'frp_first_night', 'Fire_ID', 'Fire_Name'],\n",
+       "       'night_count', 'frp_max_day', 'frp_max_night', 'frp_csum_day',\n",
+       "       'frp_csum_night', 'frp_mean_day', 'frp_mean_night', 'frp_p90_day',\n",
+       "       'frp_p90_night', 'frp_first_day', 'frp_first_night', 'Fire_ID',\n",
+       "       'Fire_Name'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2096,7 +2107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 47,
    "id": "e6f922a1-4dc6-4afd-a70d-ab43323c4682",
    "metadata": {},
    "outputs": [
@@ -2108,7 +2119,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2119,7 +2130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 48,
    "id": "1f30966d-ca06-4ef5-8e56-56c7cacf6185",
    "metadata": {},
    "outputs": [
@@ -2249,7 +2260,7 @@
        "4  2018-07-03  "
       ]
      },
-     "execution_count": 56,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2279,7 +2290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 49,
    "id": "b8f1f9e5-9c28-4a42-a677-95008e9c0662",
    "metadata": {},
    "outputs": [
@@ -2291,7 +2302,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2302,7 +2313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 50,
    "id": "322c0b61-a0ff-4d57-a23f-e7c771dffcc1",
    "metadata": {},
    "outputs": [
@@ -2322,7 +2333,7 @@
        "dtype: object"
       ]
      },
-     "execution_count": 60,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2333,7 +2344,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 51,
    "id": "ada8b0d8-09b6-45ec-9198-987be922c702",
    "metadata": {},
    "outputs": [
@@ -2353,17 +2364,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 52,
    "id": "1d980edd-c07e-466d-ab0b-7bf2c94b52b3",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "30"
+       "19"
       ]
      },
-     "execution_count": 59,
+     "execution_count": 52,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2390,7 +2401,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 53,
    "id": "6e8c1833-3140-4a3c-991c-3f13ad2e2b5a",
    "metadata": {},
    "outputs": [
@@ -2402,7 +2413,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2416,7 +2427,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 54,
    "id": "3ddb11dc-0a55-4168-ae67-049f1f6d14fc",
    "metadata": {},
    "outputs": [
@@ -2428,7 +2439,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2443,7 +2454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 55,
    "id": "d5a777b3-0eb3-424c-9efb-52431a89785e",
    "metadata": {},
    "outputs": [
