Final updates to afd processing
Fixed duplicate detections, added 2017 fires, and all fires regardless of aspen component.

--- a/Aim2/code/Python/04a_TreeMap_FIA.ipynb
+++ b/Aim2/code/Python/04a_TreeMap_FIA.ipynb
@@ -46,32 +46,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "id": "56817b46-8e0c-4959-a626-23a519c120e5",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Shape: (97383, 154221); \n",
-      "GeoTransform: -2362845.0 30.0 0.0 3180555.0 0.0 -30.0; \n",
-      "WKT: EPSG:5070; \n",
-      "NoData Value: nan; \n",
-      "Data Type: float64\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "60"
-      ]
-     },
-     "execution_count": 2,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Load the TreeMap (ca. 2016)\n",
     "# Pixel values here denote the FIA plot ID (\"tm_id\")\n",
@@ -90,28 +68,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "eb071916-fb7f-4c91-b385-bcbaa4a388b8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Cropped TreeMap to SRM bounds w/ 10km buffer.\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "54"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load and prepare our study region for cropping TreeMap\n",
     "# Southern Rockies ecoregion bounds (buffered)\n",
@@ -132,31 +92,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "af7d2100-d318-41ce-970d-7686f0359b88",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['grid_index', 'grid_area', 'afd_count', 'unique_days', 'overlap',\n",
-       "       'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90', 'frp_first',\n",
-       "       'day_max_frp', 'dt_max_frp', 'first_obs_date', 'last_obs_date',\n",
-       "       't4_max', 't4_mean', 't5_max', 't5_mean', 'day_count', 'night_count',\n",
-       "       'frp_max_day', 'frp_max_night', 'frp_csum_day', 'frp_csum_night',\n",
-       "       'frp_mean_day', 'frp_mean_night', 'frp_p90_day', 'frp_p90_night',\n",
-       "       'frp_first_day', 'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# load the aggregated FRP grid\n",
-    "fp = os.path.join(projdir,'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_fires_pixar_gridstats.gpkg')\n",
+    "fp = os.path.join(datamod,'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_fires_pixar_gridstats.gpkg')\n",
     "grid = gpd.read_file(fp)\n",
     "grid.columns"
    ]
