Updates to Tree Table summary

--- a/Aim2/code/Python/03c_viirs-afd-processing.ipynb
+++ b/Aim2/code/Python/03c_viirs-afd-processing.ipynb
@@ -2021,17 +2021,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "cb7d978f-a070-4178-99d4-2cf3d2d6e91f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saved file to: /Users/max/Library/CloudStorage/OneDrive-Personal/mcook/aspen-fire/Aim2/data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims_subset.gpkg\n"
+     ]
+    }
+   ],
    "source": [
     "# export the new fire census\n",
     "# Load the original fire perimeter data\n",
     "fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims.gpkg')\n",
     "fires = gpd.read_file(fp)\n",
     "fires = fires[fires['Fire_ID'].isin(afds_pix['Fire_ID'].unique())]\n",
-    "out_fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims_subset.gpkg')\n"
+    "out_fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims_subset.gpkg')\n",
+    "fire_grids.to_file(out_fp)\n",
+    "print(f\"Saved file to: {out_fp}\")"
    ]
   }
  ],
