--- a/Aim2/code/Python/_figures.ipynb
+++ b/Aim2/code/Python/_figures.ipynb
@@ -2,10 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "ebbcf5c5-8dc8-4d52-aa3e-c89ffc3363f9",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Ready !\n"
+     ]
+    }
+   ],
    "source": [
     "\"\"\"\n",
     "Manuscript figures\n",
@@ -43,36 +51,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "f57cfce0-1871-4d5c-8c9c-026d2b4a1930",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'grid_area', 'afd_count', 'unique_days', 'overlap',\n",
+       "       'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90', 'frp_p95',\n",
+       "       'frp_p97', 'frp_p99', 'frp_first', 'day_max_frp', 'dt_max_frp',\n",
+       "       'first_obs_date', 'last_obs_date', 't4_max', 't4_mean', 't5_max',\n",
+       "       't5_mean', 'day_count', 'night_count', 'frp_max_day', 'frp_max_night',\n",
+       "       'frp_csum_day', 'frp_csum_night', 'frp_mean_day', 'frp_mean_night',\n",
+       "       'frp_p90_day', 'frp_p90_night', 'frp_p95_day', 'frp_p95_night',\n",
+       "       'frp_p97_day', 'frp_p97_night', 'frp_p99_day', 'frp_p99_night',\n",
+       "       'frp_first_day', 'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load fire perimeter data\n",
-    "fp = os.path.join(projdir,'data/spatial/mod/nifc-ics_2018_to_2023-aspen.gpkg')\n",
+    "fp = os.path.join(projdir,'data/spatial/mod/srm_fire_census_2017_to_2023_ics_perims_subset.gpkg')\n",
     "fires = gpd.read_file(fp)\n",
     "fires.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "80b216d3-a375-4b2f-981a-c6b95012ea16",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['grid_index', 'grid_area', 'afd_count', 'unique_days', 'overlap',\n",
+       "       'frp_csum', 'frp_max', 'frp_min', 'frp_mean', 'frp_p90', 'frp_first',\n",
+       "       'day_max_frp', 'dt_max_frp', 'first_obs_date', 'last_obs_date',\n",
+       "       't4_max', 't4_mean', 't5_max', 't5_mean', 'day_count', 'night_count',\n",
+       "       'frp_max_day', 'frp_max_night', 'frp_csum_day', 'frp_csum_night',\n",
+       "       'frp_mean_day', 'frp_mean_night', 'frp_p90_day', 'frp_p90_night',\n",
+       "       'frp_first_day', 'frp_first_night', 'Fire_ID', 'Fire_Name', 'geometry'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# load the frp grid\n",
-    "fp = os.path.join(projdir,f'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.gpkg')\n",
+    "fp = os.path.join(projdir,'data/spatial/mod/VIIRS/viirs_snpp_jpss1_afd_latlon_aspenfires_pixar_gridstats.gpkg')\n",
     "grid = gpd.read_file(fp)\n",
     "grid.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "38f8fcdc-d3fa-4e8c-867b-3f3a120f00ab",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['na_l3name', 'na_l3code', 'geometry'], dtype='object')"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "fp = os.path.join(projdir,'data/spatial/raw/boundaries/na_cec_eco_l3_west.gpkg')\n",
     "ecol3 = gpd.read_file(fp)\n",
@@ -168,7 +225,7 @@
     "plt.ylabel('Latitude', size=10)\n",
     "\n",
     "# Save the map\n",
-    "plt.savefig(os.path.join(projdir, 'figures/Figure1_Aspen-Fires_NIFC-SRM.png'), dpi=300, bbox_inches='tight')\n",
+    "plt.savefig(os.path.join(projdir, 'figures/Figure1_Fires-SRM.png'), dpi=300, bbox_inches='tight')\n",
     "\n",
     "plt.show()"
    ]
