FIA summary work

--- a/Aim2/code/Python/_gridstats_lc_compare.ipynb
+++ b/Aim2/code/Python/_gridstats_lc_compare.ipynb
@@ -1637,23 +1637,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 38,
    "id": "aa5e7d93-0c49-41da-adc2-d0df1f258b6c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "There are a total of 26886 [48.4%] grids w/ any aspen\n"
+     ]
+    }
+   ],
+   "source": [
+    "# get aspen grids (any aspen component)\n",
+    "# get gridcells with at least some aspen\n",
+    "spp = 'SAF 217: Aspen'\n",
+    "spp_idx = grid_evt_[grid_evt_['SAF_SRM'] == spp]['grid_index'].unique() # list of grid indices\n",
+    "grid_spp = grid_evt_[grid_evt_['grid_index'].isin(spp_idx)]\n",
+    "# check how many aspen gridcells there are\n",
+    "n_spp_grids = len(grid_spp['grid_index'].unique())\n",
+    "print(f\"There are a total of {n_spp_grids} [{round(n_spp_grids/len(grid_evt_['grid_index'].unique())*100,1)}%] grids w/ any aspen\")"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "47be43bb-09f8-44b4-a0ee-3fe93eafdcfe",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "d9ce1beb-91b6-4c2d-ab06-c6bc01d6c7b7",
    "metadata": {},
    "outputs": [
@@ -1796,7 +1805,7 @@
        "290362  Evergreen open tree canopy  SRM 504: Juniper-Pinyon Pine Woodland  "
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1805,6 +1814,25 @@
     "# Identify the dominant EVT class for each observation\n",
     "dominant_evt = grid_evt_.loc[grid_evt_.groupby('grid_index')['pct_cover'].idxmax()]\n",
     "dominant_evt.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "b3934731-4089-474d-a1c5-e57b25ca7ce3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.35\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = len(dominant_evt[dominant_evt['SAF_SRM'] == 'SAF 217: Aspen'])\n",
+    "print(round(n/len(grid_evt_)*100,2))"
    ]
   },
   {
