Updates to FIA summary from the Tree Table

--- a/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
+++ b/Aim2/code/Python/04a_TreeMap_FIA-Prep.ipynb
@@ -193,6 +193,49 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "73a880c0-217b-48e6-86c9-b0ce3387e5af",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Load the TreeMap (ca. 2016)\n",
+    "# Pixel values here denote the FIA plot ID (\"tm_id\")\n",
+    "# see '04a_TreeMap_FIA-Prep.ipynb'\n",
+    "# fp = os.path.join(maindir,'data/landcover/USFS/RDS_TreeMap/TreeMap2016.tif') # tm_id band\n",
+    "fp = os.path.join(projdir, \"data/spatial/mod/USFS/TreeMap_2016_TMID_FORTYPCD.tif\") # multi-band\n",
+    "treemap_da = rxr.open_rasterio(fp, masked=True, cache=False, chunks='auto').squeeze()\n",
+    "\n",
+    "# Grab some raster metadata from one of the layers\n",
+    "shp, gt, wkt, nd = treemap_da.shape, treemap_da.spatial_ref.GeoTransform, treemap_da.rio.crs, treemap_da.rio.nodata\n",
+    "print(\n",
+    "    f\"Shape: {shp}; \\n\"\n",
+    "    f\"GeoTransform: {gt}; \\n\"\n",
+    "    f\"WKT: {wkt}; \\n\"\n",
+    "    f\"NoData Value: {nd}; \\n\"\n",
+    "    f\"Data Type: {treemap_da[0].dtype}\")\n",
+    "\n",
+    "# create a mapping linking FIA plot to FORTYPCD (algorithm forest type code)\n",
+    "tmid_vals = treemap_da.sel(band=1).values.flatten()  # tm_id band\n",
+    "fortypcd_vals = treemap_da.sel(band=2).values.flatten()  # FORTYPCD band\n",
+    "pixel_mapping = pd.DataFrame({\n",
+    "    'tm_id': tmid_vals,\n",
+    "    'fortypcd': fortypcd_vals\n",
+    "}).dropna(subset=['tm_id', 'fortypcd'])\n",
+    "pixel_mapping = pixel_mapping.drop_duplicates()\n",
+    "pixel_mapping['tm_id'] = pixel_mapping['tm_id'].astype(int)\n",
+    "pixel_mapping['fortypcd'] = pixel_mapping['fortypcd'].astype(int)\n",
+    "del tmid_vals, fortypcd_vals\n",
+    "gc.collect()\n",
+    "print(pixel_mapping.head(3))\n",
+    "\n",
+    "# save this file out.\n",
+    "out_fp = os.path.join(projdir,'data/spatial/mod/USFS/treemap_tmid_fortypcd_lookup.csv')\n",
+    "pixel_mapping.to_csv(out_fp)\n",
+    "print(f\"Saved file to: {out_fp}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 12,
    "id": "0ebe6a9c-9fe2-42cd-87b6-25108989cbae",
    "metadata": {},
