Species co-occurrence

--- a/Aim2/code/Python/05a_biophys_treemap.ipynb
+++ b/Aim2/code/Python/05a_biophys_treemap.ipynb
@@ -1098,9 +1098,7 @@
    "id": "b80e43d7-fe65-4205-b0d8-7e5786def772",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "# make some plots showing the distribution of FRP across forest types"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
@@ -1109,6 +1107,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# make some plots showing the distribution of FRP across forest types\n",
     "# first, gather the dominant forest type\n",
     "dfortyp = grid_forest.loc[grid_forest.groupby('grid_index')['spp_pct'].idxmax()]\n",
     "print(dfortyp['SpeciesName'].unique())\n",
@@ -1119,14 +1118,6 @@
     "print(f\"Dropping {n_zero} [{round(n_zero/len(dfortyp)*100,1)}%] gridcells w/ <1 cumulative FRP.\")\n",
     "dfortyp = dfortyp[(dfortyp['frp_max'] > 0)]"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "db628f50-f549-4073-954f-6c081d387897",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
